tests/samples/negative/expressions/if_expression_missing_else.ax
module if_expression_missing_else;

fn main() -> i32 {
    return if true { 1 };
}
